upgrade to Java 25 and remove preview not needed anymore for ScopedValue